--- a/.travis.yml
+++ b/.travis.yml
@@ -1,38 +1,13 @@
 language: node_js
-
 node_js:
-  - 10.15.1
-
-cache:
-  directories:
-    - node_modules
-
+  - "9"
+dist: trusty
+sudo: required
 branches:
   only:
-    - staging
     - master
-
 before_script:
-  - npm install
-
+  - npm install -g @angular/cli
 script:
-  - if [[ "$TRAVIS_BRANCH" = "master" || "$TRAVIS_BRANCH" = "staging" ]]; then npm run build; else echo "not a build branch"; fi
-
-before_deploy:
-  - cd $TRAVIS_BUILD_DIR
-  - sed -i '/dist/d' .gitignore
-  - git add . && git commit -m "latest build"
-
-deploy:
-  - provider: elasticbeanstalk
-    access_key_id: ${AWS_ACCESS_KEY_ID}             // You have use environment variable name instead of plain text
-    secret_access_key: ${AWS_SECRET_ACCESS_KEY}     // You have use environment variable name instead of plain text
-    region: "eu-west-2"            // "ap-south-1"
-    app: "workoutfrontend"                     // "demo-application"
-    env: "Workoutfrontend-env"                     // "demo-production"
-    bucket_name: "elasticbeanstalk-eu-west-2-345269114307" // Once you create new application, it will automatically create a unique bucket for it.
-    on:
-      branch: master
-
-after_deploy:
-  - echo "Applcation Deployed!"
+  - ng lint
+  - ng build --prod --base-href https://github.com/furrerm/mygymprogress.git
