--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,39 @@
 language: node_js
+
 node_js:
   - "9"
+  -
 dist: trusty
 sudo: required
 branches:
   only:
-    - master
+  - master
+
+cache:
+  directories:
+    - node_modules
+
 before_script:
-  - npm install -g @angular/cli
+  - npm install
+
 script:
-  - ng lint
   - ng build --prod --base-href https://github.com/furrerm/mygymprogress.git
+
+before_deploy:
+  - cd $TRAVIS_BUILD_DIR
+  - sed -i '/dist/d' .gitignore
+  - git add . && git commit -m "latest build"
+
+deploy:
+  - provider: elasticbeanstalk
+    access_key_id: ${AWS_ACCESS_KEY_ID}             // You have use environment variable name instead of plain text
+    secret_access_key: ${AWS_SECRET_ACCESS_KEY}     // You have use environment variable name instead of plain text
+    region: "eu-west-2"            // "ap-south-1"
+    app: "workoutfrontend"                     // "demo-application"
+    env: "Workoutfrontend-env"                     // "demo-production"
+    bucket_name: "elasticbeanstalk-eu-west-2-345269114307" // Once you create new application, it will automatically create a unique bucket for it.
+    on:
+      branch: master
+
+after_deploy:
+  - echo "Applcation Deployed!"
