--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,17 @@ before_script:
   - npm install -g @angular/cli
 script:
   - ng build
+before_deploy:
+  - cd './'
+  - sed -i '/dist/d' .gitignore
+  - git add . && git commit -m "latest build"
+deploy:
+  - provider: elasticbeanstalk
+    access_key_id: ${AWS_ACCESS_KEY_ID}
+    secret_access_key: ${AWS_SECRET_ACCESS_KEY}
+    region: "eu-west-2"
+    app: "workoutfrontend"
+    env: "Workoutfrontend-env"
+    bucket_name: "elasticbeanstalk-eu-west-2-345269114307"
+    on:
+      branch: master
