--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mygymprogress",
   "version": "0.0.0",
+  "main": "server.js",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.json",
