--- a/.travis.yml
+++ b/.travis.yml
@@ -11,13 +11,15 @@ before_script:
 script:
   - ng build
 before_deploy:
-  - cd './'
-  - sed -i '/dist/d' .gitignore
-  - git add . && git commit -m "latest build"
+  - zip -r mygymprogress dist package.json server.js
+  - mkdir -p dpl_upload
+  - mv mygymprogress.zip dpl_upload/mygymprogress.zip
 deploy:
   - provider: elasticbeanstalk
     access_key_id: ${AWS_ACCESS_KEY_ID}
     secret_access_key: ${AWS_SECRET_ACCESS_KEY}
+    local_dir: dpl_upload
+    skip_cleanup: true
     region: "eu-west-2"
     app: "workoutfrontend"
     env: "Workoutfrontend-env"
