--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
     "@angular/core": "~8.2.14",
+    "@angular/fire": "^6.0.0",
     "@angular/forms": "~8.2.14",
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "express": "^4.17.1",
+    "firebase": "^7.14.1",
     "hammerjs": "^2.0.8",
     "path": "^0.12.7",
     "rxjs": "~6.4.0",
