--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ branches:
 before_script:
   - npm install -g @angular/cli
 script:
-  - ng build
+  - ng build --prod
 before_deploy:
   - zip -r mygymprogress dist package.json server.js
 deploy:
