--- a/package.json
+++ b/package.json
@@ -26,17 +26,19 @@
     "@babel/compat-data": "^7.8.0",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "bootstrap": "^4.5.0",
+    "echarts": "^4.9.0",
     "express": "^4.17.1",
     "firebase": "^7.14.1",
     "hammerjs": "^2.0.8",
     "html-entities": "^1.3.1",
+    "ngx-echarts": "^5.2.1",
     "path": "^0.12.7",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.17",
+    "@angular-devkit/build-angular": "^0.803.25",
     "@angular/cli": "~8.3.20",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
@@ -52,6 +54,7 @@
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "~5.4.0",
+    "resize-observer-polyfill": "^1.5.1",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.5.3"
