--- a/package.json
+++ b/package.json
@@ -12,38 +12,38 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.0.2",
-    "@angular/cdk": "~11.0.0",
-    "@angular/common": "~11.0.2",
-    "@angular/compiler": "~11.0.2",
-    "@angular/core": "~11.0.2",
-    "@angular/fire": "^6.0.0",
-    "@angular/forms": "~11.0.2",
-    "@angular/material": "^11.0.0",
-    "@angular/platform-browser": "~11.0.2",
-    "@angular/platform-browser-dynamic": "~11.0.2",
-    "@angular/router": "~11.0.2",
-    "@babel/compat-data": "^7.8.0",
-    "@ng-bootstrap/ng-bootstrap": "^6.1.0",
-    "bootstrap": "^4.5.0",
+    "@angular/animations": "^11.2.8",
+    "@angular/cdk": "^11.2.7",
+    "@angular/common": "^11.2.8",
+    "@angular/compiler": "^11.2.8",
+    "@angular/core": "^11.2.8",
+    "@angular/fire": "^6.1.4",
+    "@angular/forms": "^11.2.8",
+    "@angular/material": "^11.2.7",
+    "@angular/platform-browser": "^11.2.8",
+    "@angular/platform-browser-dynamic": "^11.2.8",
+    "@angular/router": "^11.2.8",
+    "@babel/compat-data": "^7.13.12",
+    "@ng-bootstrap/ng-bootstrap": "^6.2.0",
+    "bootstrap": "^4.6.0",
     "echarts": "^4.9.0",
     "express": "^4.17.1",
-    "firebase": "^7.14.1",
-    "html-entities": "^1.3.1",
-    "ngx-echarts": "^5.2.1",
+    "firebase": "^7.24.0",
+    "html-entities": "^1.4.0",
+    "ngx-echarts": "^5.2.2",
     "path": "^0.12.7",
-    "rxjs": "~6.6.3",
-    "tslib": "^2.0.0",
+    "rxjs": "^6.6.7",
+    "tslib": "^2.1.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.2",
-    "@angular/cli": "~11.0.2",
-    "@angular/compiler-cli": "~11.0.2",
-    "@angular/language-service": "~11.0.2",
-    "@types/jasmine": "~3.6.0",
+    "@angular-devkit/build-angular": "^0.1100.7",
+    "@angular/cli": "^11.2.6",
+    "@angular/compiler-cli": "^11.2.8",
+    "@angular/language-service": "^11.2.8",
+    "@types/jasmine": "^3.6.9",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.7",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -51,11 +51,11 @@
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine-html-reporter": "^1.5.4",
     "protractor": "~7.0.0",
     "resize-observer-polyfill": "^1.5.1",
     "ts-node": "~7.0.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.5"
+    "typescript": "^4.1.5"
   }
 }
